# super-clipboard

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_REVIEW_FIXES.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  run-all-tests.ps1  test-rust-env.ps1  vite.config.ts
.cargo/: config.toml
.github/: COMMIT_TEMPLATE.md  DEV_CHECKLIST.md  OPTIMIZATION_SUMMARY.md  PULL_REQUEST_TEMPLATE.md  QUICK_REFERENCE.md  TASK_COMPLETION_SUMMARY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: BUILD_OPTIMIZATION.md  DRAG_DROP_TEST_PLAN.md  SECURITY_FIXES.md  TEST_REPORT.md  TODO.md  UPDATE_MIRRORS.md  architecture.md  clipboard-behavior.md  code-review-2026-06-09.md  competitive-analysis-and-roadmap.md  configuration-audit.md  privacy.md  release.md  windows-packaging.md
docs/superpowers/plans/: 2026-06-08-super-clipboard-windows-app.md  2026-07-14-backup-capacity-logging-plan.md  2026-07-14-clipboard-image-core-plan.md  2026-07-14-history-memory-ui-plan.md  2026-07-21-history-pagination-source.md
docs/superpowers/specs/: 2026-07-14-clipboard-storage-performance-design.md  2026-07-20-drag-drop-repair-design.md  2026-07-21-history-pagination-source-design.md
scripts/: tauri-config.test.mjs  versioning.mjs  versioning.test.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backup.rs  commands.rs  diagnostics.rs  main.rs  security_tests.rs
src-tauri/src/blobs/: image.rs  mod.rs  store.rs
src-tauri/src/clipboard/: mod.rs  sequence.rs  types.rs  win.rs
src-tauri/src/storage/: capacity.rs  image_migration.rs  mod.rs  repository.rs  schema.rs
src-tauri/src/system/: mod.rs  settings.rs  shortcuts.rs  tray.rs
src/features/history/: api.ts
src/features/settings/: SettingsView.tsx
src/lib/: backup-model.d.ts  backup-model.js  backup-model.test.js  clipboard-adapter.d.ts  clipboard-adapter.js  clipboard-adapter.test.js  clipboard-model.d.ts  clipboard-model.js  clipboard-model.test.js  history-ui.d.ts  history-ui.js  history-ui.test.js  settings-model.d.ts  settings-model.js  settings-model.test.js  version.ts
