[package]
name = "super-clipboard"
version = "0.1.0"
description = "Windows-first high-performance clipboard manager"
authors = ["super-clipboard contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["bmp", "jpeg", "png", "webp"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-autostart = "2.0.0"
tauri-plugin-global-shortcut = "2.0.0"
tauri-plugin-opener = "2.0.0"
thiserror = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
windows-sys = { version = ">=0.59, <=0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Ole",
  "Win32_System_SystemServices",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
] }
