[package]
name = "super-clipboard"
version = "1.1.4"
description = "Windows-first high-performance clipboard manager"
authors = ["super-clipboard contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
image = { version = "0.25", default-features = false, features = ["bmp", "png"] }
rfd = "0.15"
rusqlite = { version = "0.32", default-features = false, features = ["bundled"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
sha2 = { version = "0.10", default-features = false }
tauri = { version = "2.0.0", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-autostart = "2.0.0"
tauri-plugin-global-shortcut = "2.0.0"
tauri-plugin-opener = "2.0.0"
tauri-plugin-updater = "2.0.0"
thiserror = "1.0"
time = "=0.3.36"
uuid = { version = "1.10", default-features = false, features = ["v4", "serde"] }
zip = { version = "4.6.1", default-features = false }
windows-sys = { version = ">=0.59, <=0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Ole",
  "Win32_System_SystemServices",
  "Win32_Storage_FileSystem",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
] }

[profile.release]
# Optimize for faster builds while maintaining good runtime performance
codegen-units = 16        # Reduced from 256 for better optimization
lto = "thin"              # Thin LTO for faster linking with good optimization
opt-level = "z"           # Optimize for size (smaller binary, faster compile)
strip = true              # Strip symbols to reduce binary size
panic = "abort"           # Smaller binary, no unwinding overhead
incremental = true        # Faster incremental builds

[profile.dev]
# Speed up dev builds
opt-level = 1             # Minimal optimization for faster dev builds
incremental = true        # Enable incremental compilation
